--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                 <div><a href="#" class="button">Submit</a></div>
             </div>
             
-            <div id="bi-flag"class="displaynone">
+            <div id="bi-flag"class="displaynone"></div>
             <div class="flag" id="bi-trans-flag">
             <img class="blob-left" src="images/blob2.png" alt="Description of Chamallows">
             <img class="bags-tilt-1" id="bag-3" src="images/trans_bag.png" alt="Chamallows: Pride Edition Transmallows">
-            </div></div>
+            </div>
             <img id="cpe" class="displaynone" src="images/cpe.png" alt="Chamallows: Pride Edition Description">
             <div id="trans-flag" class="displaynone">
                 <img class="blob-left" src="images/blob2.png" alt="Description of Chamallows">
@@ -89,9 +89,9 @@
             </div>
     <!-- NUTRITIONAL VALUES/INGREDIENTS -->
             <div id="nv"></div>
-            <div id="nv2" class="displaynone"></div>
+            <div id="nv2" class="displaynone" ></div>
             <div id="ingredients"></div>
-            <div id="ingredients2" class="displaynone"></div>
+            <div id="ingredients2" class="displaynone" ></div>
     <!-- MY FRIENDS -->
 
     </main>
