photo by and hover

--- a/index.html
+++ b/index.html
@@ -92,17 +92,16 @@
             <div id="nv2" class="displaynone" ></div>
             <div id="ingredients"></div>
             <div id="ingredients2" class="displaynone" ></div>
-    <!-- MY FRIENDS -->
-
     </main>
 <footer>
 
 <div id="footer-picture">
+    <!-- MY FRIENDS -->
     <div id="other-products">
-        <a href="https://www.haribo.com/en-gb/products/haribo/balla-stixx-strawberry"><img src="images/balla.png" alt="Balla Stixx"></a>
-        <a href="https://www.haribo.com/en-gb/products/haribo/squidglets"><img class="left-tilt" src="images/squid.png" alt="Squidglets"></a>
-        <a href="https://www.haribo.com/en-gb/products/haribo/jelly-babies"><img class="right-tilt" src="images/jelly.png" alt="Jelly Babies"></a>
-        <a href="https://www.haribo.com/en-gb/products/haribo/super-mix"><img class="left-tilt" src="images/super.png" alt="Supermix"></a>
+        <a href="https://www.haribo.com/en-gb/products/haribo/balla-stixx-strawberry"><img src="images/balla.png" alt="Balla Stixx" id="ballastixx"></a>
+        <a href="https://www.haribo.com/en-gb/products/haribo/squidglets"><img class="left-tilt" src="images/squid.png" alt="Squidglets" id="squidglets"></a>
+        <a href="https://www.haribo.com/en-gb/products/haribo/jelly-babies"><img class="right-tilt" src="images/jelly.png" alt="Jelly Babies" id="jellybabies"></a>
+        <a href="https://www.haribo.com/en-gb/products/haribo/super-mix"><img class="left-tilt" src="images/super.png" alt="Supermix" id="supermix"></a>
     </div>
 </div>
 <div id="footer2" class="displaynone">
