--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         
         <div id="header-bottom">
-            <img a href="https://www.haribo.com/en-gb/" id="haribo" src="images/haribo-logo.svg" alt="Haribo" width="150">
+            <a href="https://www.haribo.com/en-gb/"><img id="haribo" src="images/haribo-logo.svg" alt="Haribo" width="150"></a>
             <div id="burger-menu" class="displaynone">
                 <img id="search" src="images/magnifying-glass.png" alt="search icon" a href="#" width="30">
                 <img id="burger" src="images/burger.png" alt="burger icon" a href="#" width="30">
