--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chamallows: Pride Edition</title>
-    <meta name="description" content="desc">
+    <meta name="description" content="Soft and Fluffy, HARIBO Chamallows: Pride Edition have a unique texture that melts in the mouth for an indulgent treat. Perfect for barbecue toasting, chocolate fondue and Chamallow lollipop creations.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
