--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <div id="header-bottom">
             <a href="https://www.haribo.com/en-gb/"><img id="haribo" src="images/haribo-logo.svg" alt="Haribo" width="150"></a>
             <div id="burger-menu" class="displaynone">
-                <img id="search" src="images/magnifying-glass.png" alt="search icon" a href="#" width="30">
-                <img id="burger" src="images/burger.png" alt="burger icon" a href="#" width="30">
+                <a href="#"><img id="search" src="images/magnifying-glass.png" alt="search icon" width="30"></a>
+                <a href="#"><img id="burger" src="images/burger.png" alt="burger icon" width="30"></a>
             </div>
             <nav id="bottom-right-header">
                 <a href="https://www.haribo.com/en-gb/products">Products</a>
                 <a href="https://www.haribo.com/en-gb/about-us">About us</a>
                 <a href="https://www.haribo.com/en-gb/career">Career</a>
-                <img id="search" src="images/magnifying-glass.png" alt="search icon" a href="#" width="30">
-                <img id="bear-nav" src="images/bear.PNG" alt="Haribo bear" height="110px">
+                <a href="#"><img id="search" src="images/magnifying-glass.png" alt="search icon" width="30"></a>
+                <img id="bear-nav" src="images/bear.PNG" alt="Haribo bear">
             </nav>
         </div>
         </header>
@@ -62,7 +62,7 @@
                 <div><a href="#" class="button">Submit</a></div>
             </div>
             
-            <div id="bi-flag"class="displaynone"></div>
+            <div id="bi-flag" class="displaynone"></div>
             <div class="flag" id="bi-trans-flag">
             <img class="blob-left" src="images/blob2.png" alt="Description of Chamallows">
             <img class="bags-tilt-1" id="bag-3" src="images/trans_bag.png" alt="Chamallows: Pride Edition Transmallows">
@@ -85,7 +85,7 @@
             </div>
             <div id="or2">
                 <img src="images/or2.png" alt="Our Responsiblity">
-                <img id="mascot"src="images/mascot.png" alt="Mascot">
+                <img id="mascot" src="images/mascot.png" alt="Mascot">
             </div>
     <!-- NUTRITIONAL VALUES/INGREDIENTS -->
             <div id="nv"></div>
