--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <img id="blob3" class="blob-right" src="images/blob3.png" alt="Sweet Potato Bomb Recipe">
             </div>
             
-            <div id="picture" class="flag"></div>
+            <div id="picture" class="flag" alt="creative commons-license"></div>
     <!-- OUR RESPONSIBILITY -->
             <div id="or">
                 <img src="images/ourresp.png" alt="Our Responsiblity">
