--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="white">
                 <img class="bags-tilt-2" src="images/bi_bag.png" alt="Chamallows: Pride Edition Billows">
                 <img id="blob-right" src="images/blob1.png" alt="Contest Description">
-                <div><a href="#" class="button">Go to Recipe</a></div>
+                <div><a href="#blob3" class="button">Go to Recipe</a></div>
                 <div><a href="#" class="button">Submit</a></div>
             </div>
             
