--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- LANDING -->
     <section class="flag" id="hero">
         <div class="hero-wrapper">
+        <!--HEADER-->
         <header>
         <div>
             <nav id="top-right-header">
@@ -36,6 +37,8 @@
             </nav>
         </div>
         </header>
+        <!--HEADER END-->
+        <!--SLOGAN + PRODUCT-->
         <div class="hero-wrapper">
              <h1 id="slogan" class="displaynone">You've met Rainbollows - now it's time to meet the rest of the crew!</h1>
         <div id="slogan-product">
@@ -51,7 +54,7 @@
         </div>
         </div>
     </section>
-
+<!--LANDING END-->
 <!-- MAIN -->
     <main>
     <!-- PRODUCTS -->
